# web_betong

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml
.github/workflows/: backend-ci.yml  e2e.yml  frontend-ci.yml
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_phase1_foundation.py  0002_phase2_pricing_sales.py  0003_phase3_dispatch_execution.py  0004_phase4_inventory_costing.py  0005_phase5_production_costing.py
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/api/routes/: auth.py  costing.py  dispatch.py  health.py  integration.py  inventory.py  pricing.py  resources.py
backend/app/application/: costing.py  dispatch.py  inventory.py  pricing.py  registry.py
backend/app/core/: __init__.py  audit_middleware.py  auth.py  config.py  dependencies.py  errors.py  logging.py  middleware.py  security.py  sentry.py
backend/app/domain/: models.py
backend/app/infrastructure/: db.py  geocode.py
backend/tests/: test_suite.py
docs/: checklist.md  solution-spec.md
frontend/: next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx  providers.tsx
frontend/app/costing/: page.tsx
frontend/i18n/: request.ts
frontend/messages/: en.json  vi.json
frontend/public/: manifest.webmanifest
frontend/tests/: test_suite.spec.ts
infra/docker/: backend.Dockerfile  frontend.Dockerfile
scripts/: seed.py
(+43 files in other folders)
